@@ -13,9 +13,9 @@
 package net.sf.oval.test.guard;
 
 import junit.framework.TestCase;
-import net.sf.oval.ConstraintsViolatedException;
 import net.sf.oval.constraint.NotNull;
-import net.sf.oval.guard.ExceptionTranslatorJDKExceptionsImpl;
+import net.sf.oval.exception.ConstraintsViolatedException;
+import net.sf.oval.exception.ExceptionTranslatorJDKExceptionsImpl;
 import net.sf.oval.guard.Guard;
 import net.sf.oval.guard.Guarded;
 
