@@ -4,9 +4,9 @@ import java.math.BigDecimal;
 import java.util.Date;
 
 import junit.framework.TestCase;
-import net.sf.oval.ConstraintsViolatedException;
 import net.sf.oval.constraint.Assert;
 import net.sf.oval.constraint.NotNull;
+import net.sf.oval.exception.ConstraintsViolatedException;
 import net.sf.oval.guard.Guard;
 import net.sf.oval.guard.Guarded;
 import net.sf.oval.guard.Post;
