@@ -14,10 +14,10 @@ package net.sf.oval.test.guard;
 
 import junit.framework.TestCase;
 import net.sf.oval.ConstraintViolation;
-import net.sf.oval.ConstraintsViolatedException;
 import net.sf.oval.constraint.NotNull;
 import net.sf.oval.context.FieldContext;
 import net.sf.oval.context.MethodParameterContext;
+import net.sf.oval.exception.ConstraintsViolatedException;
 import net.sf.oval.guard.ConstraintsViolatedAdapter;
 import net.sf.oval.guard.Guarded;
 import net.sf.oval.guard.PostValidateThis;
