@@ -20,7 +20,6 @@ import java.util.regex.Pattern;
 import junit.framework.TestCase;
 import net.sf.oval.Check;
 import net.sf.oval.ConstraintViolation;
-import net.sf.oval.ConstraintsViolatedException;
 import net.sf.oval.configuration.pojo.elements.ClassConfiguration;
 import net.sf.oval.configuration.pojo.elements.ConstraintSetConfiguration;
 import net.sf.oval.configuration.pojo.elements.ConstructorConfiguration;
@@ -34,6 +33,7 @@ import net.sf.oval.constraint.Length;
 import net.sf.oval.constraint.LengthCheck;
 import net.sf.oval.constraint.MatchPatternCheck;
 import net.sf.oval.constraint.NotNullCheck;
+import net.sf.oval.exception.ConstraintsViolatedException;
 import net.sf.oval.exception.ValidationFailedException;
 import net.sf.oval.guard.ConstraintsViolatedAdapter;
 import net.sf.oval.guard.Guard;
